@@ -8,7 +8,7 @@
 	db_mysql_connect( $g_hostname, $g_db_username, $g_db_password, $g_database_name );
 
 	### grab the user id currently logged in
-	$t_user_id = get_current_user_id();
+	$t_user_id = get_current_user_field( "id " );
 
 	### get the bugnote data
 	$query = "SELECT *
