@@ -34,7 +34,7 @@
 	<td bgcolor=<? echo $g_white_color ?>>
 	<table width=100%>
 	<form method=post action="<? echo $g_news_add ?>">
-	<input type=hidden name=f_poster_id value="<? echo get_current_user_id() ?>">
+	<input type=hidden name=f_poster_id value="<? echo get_current_user_field( "id " ) ?>">
 	<tr>
 		<td colspan=2 bgcolor=<? echo $g_table_title_color ?>>
 			<b><? echo $s_add_news_title ?></b>
